traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:20: error: Missing closing brace `}' assumed here
}
^